[gd_scene load_steps=4 format=3 uid="uid://fnabxih0s6b4"]

[ext_resource type="Script" path="res://TestBS/MatthewTestBS/pause_screen.gd" id="1_pypjs"]

[sub_resource type="LabelSettings" id="LabelSettings_frxje"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_bk304"]
font_size = 50

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_pypjs")

[node name="MainScreen" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Pause" type="Label" parent="MainScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 483.5
offset_top = 116.0
offset_right = 628.5
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2
text = "Pause"
label_settings = SubResource("LabelSettings_frxje")

[node name="Back" type="Button" parent="MainScreen"]
layout_mode = 0
offset_left = 510.0
offset_top = 277.0
offset_right = 654.0
offset_bottom = 326.0
text = "Back to Game
"

[node name="Settings" type="Button" parent="MainScreen"]
layout_mode = 0
offset_left = 510.0
offset_top = 351.0
offset_right = 654.0
offset_bottom = 405.0
text = "Settings
"

[node name="ReturnToTitle" type="Button" parent="MainScreen"]
layout_mode = 0
offset_left = 510.0
offset_top = 432.0
offset_right = 654.0
offset_bottom = 486.0
text = "Quit to Title
"

[node name="SettingsMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Settings" type="Label" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -238.0
offset_right = 97.0
offset_bottom = -169.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
label_settings = SubResource("LabelSettings_bk304")

[node name="BackToMain" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_left = 511.0
offset_top = 428.0
offset_right = 654.0
offset_bottom = 478.0
text = "Back"

[node name="Save" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_left = 597.0
offset_top = 355.0
offset_right = 740.0
offset_bottom = 405.0
text = "Save"

[node name="Audio" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_left = 418.0
offset_top = 355.0
offset_right = 561.0
offset_bottom = 405.0
text = "Audio"

[node name="Visual" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_left = 597.0
offset_top = 280.0
offset_right = 740.0
offset_bottom = 330.0
text = "Visual"

[node name="Controls" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_left = 418.0
offset_top = 279.0
offset_right = 561.0
offset_bottom = 329.0
text = "Controls"

[connection signal="pressed" from="MainScreen/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MainScreen/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainScreen/Settings" to="SettingsMenu" method="_on_settings_pressed"]
[connection signal="pressed" from="MainScreen/ReturnToTitle" to="." method="_on_return_to_title_pressed"]
[connection signal="pressed" from="SettingsMenu/BackToMain" to="." method="_on_back_to_main_pressed"]
