[gd_scene load_steps=20 format=3 uid="uid://fnabxih0s6b4"]

[ext_resource type="Script" path="res://TestBS/MatthewTestBS/pause_screen.gd" id="1_pypjs"]
[ext_resource type="Texture2D" uid="uid://ctp66q1owd1yv" path="res://TestBS/MatthewTestBS/Assets/ContinueIcon_UI_Unlicked_2D_ElaineK.png" id="2_dxvud"]
[ext_resource type="Texture2D" uid="uid://b0y45dxmarxym" path="res://TestBS/MatthewTestBS/Assets/ContinueIcon_UI_clicked_2D_ElaineK.png" id="3_eqntn"]
[ext_resource type="Texture2D" uid="uid://bm8of4dt7r0ye" path="res://TestBS/MatthewTestBS/Assets/OptionsIcon_UI_Unlicked_2D_ElaineK.png" id="3_tv3kc"]
[ext_resource type="Texture2D" uid="uid://gr4bxdw5k71q" path="res://TestBS/MatthewTestBS/Assets/SoundIcon_UI_Unlicked_2D_ElaineK.png" id="4_6idb3"]
[ext_resource type="Texture2D" uid="uid://s2fh84ss178w" path="res://TestBS/MatthewTestBS/Assets/OptionsIcon_UI_clicked_2D_ElaineK.png" id="5_atm4j"]
[ext_resource type="Texture2D" uid="uid://bt6rfbpfmw120" path="res://TestBS/MatthewTestBS/Assets/TitleButton_UI_Unlicked_2D_ElaineK.png" id="6_8aml7"]
[ext_resource type="Texture2D" uid="uid://gk5v07cr3l0u" path="res://TestBS/MatthewTestBS/Assets/TitleButton_UI_clicked_2D_ElaineK.png" id="7_sagcx"]
[ext_resource type="Texture2D" uid="uid://b80qxnfvh8w50" path="res://TestBS/MatthewTestBS/Assets/SoundIcon_UI_clicked_2D_ElaineK.png" id="7_umxkw"]
[ext_resource type="Texture2D" uid="uid://binglvlfj8crp" path="res://TestBS/MatthewTestBS/Assets/PausePlant_UI_2D_ElaineKelling_02.png" id="10_6ihv1"]
[ext_resource type="Texture2D" uid="uid://de7tpl2hre77s" path="res://TestBS/MatthewTestBS/Assets/SaveIcon_UI_Unlicked_2D_ElaineK.png" id="11_g646r"]
[ext_resource type="Texture2D" uid="uid://ban63iajhe566" path="res://TestBS/MatthewTestBS/Assets/SaveIcon_UI_clicked_2D_ElaineK.png" id="12_2dk6m"]
[ext_resource type="Texture2D" uid="uid://b07067vj6kw1u" path="res://TestBS/MatthewTestBS/Assets/ControlMenu_UI_2D_ElaineKelling_01.png" id="13_13vkb"]
[ext_resource type="Texture2D" uid="uid://dmlikro6bosc0" path="res://TestBS/MatthewTestBS/Assets/ExitButton_UI2D_unClicked_ElaineK_01.png" id="14_plv6x"]
[ext_resource type="Texture2D" uid="uid://c8pgh2rchop7k" path="res://TestBS/MatthewTestBS/Assets/ExitButton_UI2D_Clicked_ElaineK_01.png" id="15_mqqgr"]

[sub_resource type="LabelSettings" id="LabelSettings_bk304"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_gsbqn"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_ssci4"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_k3hf5"]
font_size = 25

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_pypjs")

[node name="MainScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenu" type="Sprite2D" parent="MainScreen"]
position = Vector2(960, 523)
texture = ExtResource("10_6ihv1")

[node name="Back" type="TextureButton" parent="MainScreen"]
layout_mode = 0
offset_left = 847.0
offset_top = 656.0
offset_right = 1071.0
offset_bottom = 808.0
texture_normal = ExtResource("2_dxvud")
texture_pressed = ExtResource("3_eqntn")

[node name="Settings" type="TextureButton" parent="MainScreen"]
layout_mode = 0
offset_left = 852.0
offset_top = 336.0
offset_right = 1076.0
offset_bottom = 488.0
texture_normal = ExtResource("3_tv3kc")
texture_pressed = ExtResource("5_atm4j")

[node name="ReturnToTitle" type="TextureButton" parent="MainScreen"]
z_index = -1
layout_mode = 0
offset_left = 395.0
offset_top = 443.0
offset_right = 611.0
offset_bottom = 587.0
texture_normal = ExtResource("6_8aml7")
texture_pressed = ExtResource("7_sagcx")

[node name="Audio" type="TextureButton" parent="MainScreen"]
layout_mode = 0
offset_left = 855.0
offset_top = 508.0
offset_right = 1079.0
offset_bottom = 660.0
texture_normal = ExtResource("4_6idb3")
texture_pressed = ExtResource("7_umxkw")

[node name="Save" type="TextureButton" parent="MainScreen"]
z_index = -1
layout_mode = 0
offset_left = 1306.0
offset_top = 443.0
offset_right = 1522.0
offset_bottom = 587.0
texture_normal = ExtResource("11_g646r")
texture_pressed = ExtResource("12_2dk6m")

[node name="ControlsScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Controls" type="Sprite2D" parent="ControlsScreen"]
position = Vector2(989, 551)
texture = ExtResource("13_13vkb")

[node name="Exit" type="TextureButton" parent="ControlsScreen"]
layout_mode = 0
offset_left = 1618.0
offset_top = 169.0
offset_right = 1690.0
offset_bottom = 241.0
texture_normal = ExtResource("14_plv6x")
texture_pressed = ExtResource("15_mqqgr")

[node name="AudioMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Audio" type="Label" parent="AudioMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -187.0
offset_right = 108.0
offset_bottom = -118.0
grow_horizontal = 2
grow_vertical = 2
text = "Audio"
label_settings = SubResource("LabelSettings_bk304")

[node name="MusicSlider" type="HSlider" parent="AudioMenu"]
layout_mode = 0
offset_left = 492.0
offset_top = 261.0
offset_right = 633.0
offset_bottom = 293.0

[node name="SFXSlider" type="HSlider" parent="AudioMenu"]
layout_mode = 0
offset_left = 492.0
offset_top = 334.0
offset_right = 633.0
offset_bottom = 366.0

[node name="VoiceSlider" type="HSlider" parent="AudioMenu"]
layout_mode = 0
offset_left = 492.0
offset_top = 400.0
offset_right = 633.0
offset_bottom = 432.0

[node name="Music" type="Label" parent="AudioMenu"]
layout_mode = 0
offset_left = 527.0
offset_top = 219.0
offset_right = 585.0
offset_bottom = 254.0
text = "BGM"
label_settings = SubResource("LabelSettings_gsbqn")

[node name="SFX" type="Label" parent="AudioMenu"]
layout_mode = 0
offset_left = 540.0
offset_top = 299.0
offset_right = 583.0
offset_bottom = 334.0
text = "SFX"
label_settings = SubResource("LabelSettings_ssci4")

[node name="Voices" type="Label" parent="AudioMenu"]
layout_mode = 0
offset_left = 529.0
offset_top = 366.0
offset_right = 605.0
offset_bottom = 401.0
text = "Voices"
label_settings = SubResource("LabelSettings_k3hf5")

[node name="BackToSettings" type="Button" parent="AudioMenu"]
layout_mode = 0
offset_left = 495.0
offset_top = 456.0
offset_right = 638.0
offset_bottom = 506.0
text = "Back"

[connection signal="pressed" from="MainScreen/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MainScreen/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainScreen/Settings" to="ControlsScreen" method="_on_settings_pressed"]
[connection signal="pressed" from="MainScreen/ReturnToTitle" to="." method="_on_return_to_title_pressed"]
[connection signal="pressed" from="MainScreen/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="MainScreen/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="ControlsScreen/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="AudioMenu/BackToSettings" to="." method="_on_back_to_settings_pressed"]
